exports[`test can map state 1`] = `
<div>
  Hello 
  DEFAULT
</div>
`;

exports[`test can map state 2`] = `
<div>
  Hello 
  UPDATED
</div>
`;

exports[`test support reselect style constructors in mapState 1`] = `
<div>
  Count is 
  3
</div>
`;
